--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 codeowners = "^0.6.0"
 ripgrepy = "^2.0.0"
-plotext = "^5.2.8"
+plotext = { git = "https://github.com/piccolomo/plotext", tag = "5.3.0" }
 pyperclip = "^1.8.2"
 gitpython = "^3.1.40"
 platformdirs = "^3.11.0"
