--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "refactor-stats-maker"
-version = "0.4.2"
+version = "0.5.0"
 description = ""
 authors = ["Tiago Pereira <tiago.pereira@infraspeak.com>"]
 readme = "README.md"
@@ -20,6 +20,8 @@ jira = "^3.5.2"
 configparser = "^6.0.0"
 more-itertools = "^10.1.0"
 click = "^8.1.7"
+rich = "^13.7.0"
+time-machine = "^2.13.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
